templates/04-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations: 
    argocd.argoproj.io/sync-wave: "2"
 name: example-service-ingress
 namespace: 3scale
spec:
 ingressClassName: nginx
 rules:
   - host: example-test-service.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: apicast-staging
               port:
                 number: 8080
