templates/07-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations: 
    argocd.argoproj.io/hook: PostSync
    argocd.argoproj.io/sync-wave: "6"
  name: example-service-ingress
  labels:
    dummy-label: dummy-value
  namespace: 3scale
spec:
 ingressClassName: nginx
 rules:
   - host: example-test-service-changed.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: apicast-staging
               port:
                 number: 8080
